--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,15 @@ body {
 
 .encabezado {
     height: 10vh;
-    background-color: #0062cc
+    background-color: #0062cc;
 }
 
-.card-products-container 
-{
+.card-products-container {
     margin: 10vh auto 0 auto;
     height: 80vh;
 }
 
-.card-products 
-{
+.card-products {
     text-align: center;
     display: flex;
     flex-direction: row;
@@ -24,17 +22,13 @@ body {
     flex-wrap: wrap;
 }
 
-.card-products img 
-{
+.card-products img {
     margin-top: 40px;
     width: 250px;
     height: 250px;
 }
 
-
-
-.cart-btn 
-{
+.cart-btn {
     position: fixed;
     top: 90vh;
     right: 20px;
@@ -46,16 +40,14 @@ body {
     transition: transform 0.2s ease-in-out;
 }
 
-.cart-btn:hover 
-{
+.cart-btn:hover {
     cursor: pointer;
     opacity: 0.9;
 }
 
-.modal-overlay
-{
+.modal-overlay {
     display: none;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.8);
     position: fixed;
     top: 0;
     left: 0;
@@ -64,133 +56,136 @@ body {
     z-index: 1;
 }
 
-.modal-container 
-{
+.modal-container {
     display: none;
-    background-color: white;
+    color: white;
+    font-size: 20px;
+    background-color: rgb(8, 14, 92);
     box-shadow: 0px 3px 6px black;
     padding: 40px;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
-    transform:translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     max-width: 500px;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     max-height: 80vh;
     overflow-y: auto;
 }
 
-.modal-container::-webkit-scrollbar
-{
+@media (max-width: 500px) {
+    .modal-container {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        padding: 20px;
+        box-sizing: border-box;
+        overflow-y: auto;
+        transform: none;
+    }
+}
+
+.modal-container::-webkit-scrollbar {
     display: none;
 }
 
-.modal-close 
-{
+.modal-close {
     float: right;
     cursor: pointer;
 }
 
-.modal-title 
-{
+.modal-title {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
     text-align: center;
 }
 
-.modal-body
-{
+.modal-body {
     margin-bottom: 20px;
     text-align: center;
 }
 
-.product 
-{
+.product {
     display: flex;
     align-items: center;
     justify-content: space-around;
     margin-bottom: 20px;
+    background-color: rgb(8, 2, 30);
+    padding: 20px;
+    border-radius: 20px;
 }
 
-.product-img 
-{
+.product-img {
     height: 80px;
     margin-right: 20px;
     width: 80px;
 }
 
-.product-info
-{
+.product-info {
     flex: 1;
-    text-align: left;
+    text-align: center;
 }
 
-.product-info h4 
-{
+/* .product-info h4 {
     margin-top: 35px;
-}
+} */
 
-.quantity 
-{
+.quantity {
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-top: 10px;
-    margin-right: 4em;
+    justify-content:center;
+    width: 200px;
+    /* margin-top: 10px;
+    margin-right: 4em; */
 }
 
 .quantity-btn-decrese,
-.quantity-btn-increse 
-{
-    color: black;
+.quantity-btn-increse {
+    color: white;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
     width: 28px;
     font-weight: bold;
 }
 
-.quantity-input 
-{
-    color: black;
-    font-size: 16px;
-    padding: 10 10px;
+.quantity-input {
+    color: white;
+    font-size: 20px;
+    padding: 10px;
     text-align: center;
     width: 50px;
     font-weight: bold; 
 }
 
-@media only screen and (max-width: 500px)
-{
-    .product-img 
-    {
+@media only screen and (max-width: 500px) {
+    .product-img {
         display: none;
     }
 
-    .modal-body 
-    {
+    .modal-body {
         margin-left: 5px;
         margin-right: 5px;
     }
 }
 
-.price 
-{
+.price {
     font-size: 20px;
     font-weight: bold;
-    margin-top: 20px;
 }
 
-.delete-product 
-{
-    margin-top: 20px;
+.delete-product {
     margin-left: 2em;
-    cursor: pointer
+    cursor: pointer;
 }
 
-.modal-footer 
-{
+.modal-footer {
     text-align: center;
 }
 
@@ -201,8 +196,7 @@ body {
     margin-bottom: 10px;
 }
 
-.cart-counter 
-{
+.cart-counter {
     position: fixed;
     top: 89vh;
     right: 10px;
@@ -216,8 +210,7 @@ body {
     font-size: 15px;
 }
 
-.btn-primary 
-{
+.btn-primary {
     background-color: #007bff;
     border-color: #007bff;
     color: #ffffff;
@@ -225,18 +218,16 @@ body {
     font-weight: bold;
     padding: 10px 16px;
     text-transform: uppercase;
-    transition:background-color 0;
+    transition: background-color 0;
     cursor: pointer;
 }
 
-.btn-primary:hover
-{
+.btn-primary:hover {
     background-color: #0069d9;
     border-color: #0062cc;
 }
 
-#button-checkout 
-{
+#button-checkout {
     z-index: 10;
 }
 
@@ -249,20 +240,7 @@ body {
     background-color: #0062cc;
 }
 
-/* .card-products button 
-{
-    border: none;
-    outline: 0;
-    padding: 10px;
-    color: white;
-    background-color: #1bcb7f;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-} */
-
-.card-products button:hover 
-{
+.card-products button:hover {
     opacity: 0.7;
 }
 
@@ -273,7 +251,7 @@ body {
     cursor: pointer;
     border: none;
     border-radius: 5px;
-    background-color:#1bcb7f;
+    background-color: #1bcb7f;
     color: white;
     transition: transform 0.2s, box-shadow 0.2s;
 }
