--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    flex-wrap: wrap;
 }
 
 .card-products img {
@@ -76,7 +75,7 @@ body {
 
 @media (max-width: 500px) {
     .modal-container {
-        display: block;
+        display: none;
         position: fixed;
         top: 0;
         left: 0;
@@ -88,6 +87,13 @@ body {
         box-sizing: border-box;
         overflow-y: auto;
         transform: none;
+    }
+
+    .card-products {
+        width: 300px;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
     }
 }
 
