--- a/styles.css
+++ b/styles.css
@@ -398,7 +398,7 @@ body {
 {
     display: flex;
     flex-direction: column;
-    height: 95vh;
+    /* height: 95vh; */
     align-items: center;
 }
 
