--- a/styles.css
+++ b/styles.css
@@ -7,19 +7,27 @@ body {
 .encabezado {
     height: 10vh;
     background-color: #1a0425;
-    padding: 1em;
     position: fixed; 
     width: 100%;
     top: 0; 
     left: 0;
     z-index: 1000; 
+
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
 .logo
 {
-    width: 80px;
-    height: 80px;
-    margin-left: 20px;
+    display: block;
+    width: 70px;
+    margin-left: 10px;
+    height: 70px;
 }
 
 .card-products-container {
@@ -43,11 +51,13 @@ body {
     height: 250px;
 }
 
+.contenedorCarrito
+{
+    width: 60px;
+}
+
 .cart-btn {
-    z-index: 1000;
-    position: fixed;
-    top: 5vh;
-    right: 20px;
+
     background-color: rgb(242, 145, 234);
     padding: 10px;
     border-radius: 50%;
@@ -92,8 +102,8 @@ body {
 
 .cart-counter {
     position: fixed;
-    top:4vh;
-    right: 10px;
+    top:1vh;
+    right: 6px;
     color: #fff;
     text-align: center;
     background-color: red;
@@ -156,98 +166,6 @@ body {
     text-align: center;
     width: 250px;
 
-}
-
-@media (max-width: 500px) {
-
-    .modal-informacion
-    {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        max-width: 100%;
-        max-height: 100%;
-        padding: 20px;
-        box-sizing: border-box;
-        overflow-y: auto;
-        transform: none;
-        font-size: 20px;
-        background-color: #611987;
-        z-index: 2;
-        overflow-y: auto;
-        color: white;
-    }
-
-    .modal-container {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        max-width: 100%;
-        max-height: 100%;
-        padding: 20px;
-        box-sizing: border-box;
-        overflow-y: auto;
-        transform: none;
-    }
-
-    .card-products {
-        width: 300px;
-        flex-direction: column;
-        justify-content: center;
-        margin: 0 auto;
-    }
-
-    .cart-btn {
-        top: 5vh;
-        right: 12px;
-    }
-
-    .cart-counter {
-        top: 3.5vh;
-        right: 6px;
-    }
-
-    .product
-    {
-        font-size: 15px;
-    }
-
-    .delete-product {
-        margin-left: 5px;
-        cursor: pointer;
-        width: 10%;
-    }
-
-    .quantity 
-    {
-        padding: 0 5px;
-        width: 20%;
-    }
-
-    .product-img
-    {
-        width: 40px;
-        height: 40px;
-        margin: 0;
-    }
-    
-    .product-info {
-        flex: 1;
-        text-align: center;
-        width: 40%;
-
-    }
-
-    .price {
-        width: 20%;
-    }
-    
 }
 
 .modal-container::-webkit-scrollbar {
@@ -482,8 +400,6 @@ p
     margin-right: 30px ;
 }
 
-
-
 .wpp-btn {
     z-index: 1000;
     position: fixed;
@@ -500,4 +416,114 @@ p
 .wpp-btn:hover 
 {
     cursor: pointer;
+}
+
+.buscadorProductos
+{
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 10px;
+    margin: 0 auto;
+    height: 20px;
+    flex: 1;
+    max-width: 450px;
+    font-size: 15px;
+}
+
+
+@media (max-width: 500px) {
+
+    .modal-informacion
+    {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        padding: 20px;
+        box-sizing: border-box;
+        overflow-y: auto;
+        transform: none;
+        font-size: 20px;
+        background-color: #611987;
+        z-index: 2;
+        overflow-y: auto;
+        color: white;
+    }
+
+    .modal-container {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        padding: 20px;
+        box-sizing: border-box;
+        overflow-y: auto;
+        transform: none;
+    }
+
+    .card-products {
+        width: 300px;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    .cart-btn {
+        top: 5vh;
+        right: 12px;
+    }
+
+    .cart-counter {
+        top: 1vh;
+        right: 6px;
+    }
+
+    .product
+    {
+        font-size: 15px;
+    }
+
+    .delete-product {
+        margin-left: 5px;
+        cursor: pointer;
+        width: 10%;
+    }
+
+    .quantity 
+    {
+        padding: 0 5px;
+        width: 20%;
+    }
+
+    .product-img
+    {
+        width: 40px;
+        height: 40px;
+        margin: 0;
+    }
+    
+    .product-info {
+        flex: 1;
+        text-align: center;
+        width: 40%;
+
+    }
+
+    .price {
+        width: 20%;
+    }
+
+    .buscadorProductos
+    {
+        max-width: 200px;
+    }
+    
 }
