--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .encabezado {
-    height: 15vh;
+    height: 16vh;
     background-color: #1a0425;
     position: fixed; 
     width: 100%;
@@ -15,10 +15,8 @@ body {
     display: grid;
     grid-template-columns: 45px 1fr 55px;
     grid-template-rows: 1fr;
-    grid-gap: 10px;    
     box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
     padding: 10px 0px;
-    gap: 5px;
 }
 
 .modal-menu{
@@ -40,16 +38,27 @@ body {
     font-size: 20px;
     background-color: #611987;
 }
+
+.centrarMenu
+{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
 .centrarEnlace
 {
-    justify-self: center; /* Centrar horizontalmente */
-    align-content: center
+    justify-self: center;
+    align-content: center;
+    width: 70px;
+    height: 70px;
 }
 
 .menu{
     /* display: block; */
+    justify-content: center;
+    align-items: center;
     width: 40px;
-    margin-left: 10px;
     height: 40px;
     grid-column: 1 / 3;
     grid-row: 1;
@@ -78,7 +87,7 @@ body {
 }
 
 .card-products img {
-    margin-top: 40px;
+    margin-top: 20px;
     width: 250px;
     height: 250px;
 }
@@ -310,6 +319,7 @@ body {
 .nombreProducto
 {
     width: 250px;
+    margin-bottom: 0px;
 }
 
 /* Efecto carrito */
@@ -413,9 +423,11 @@ p
     margin-top: 25px;
 }
 
+
+
 .precio
 {
-    margin-bottom: 15px;
+    margin: 15px 0px;
 }
 
 .contenedorFooter
@@ -527,7 +539,7 @@ p
     }
 
     .cart-counter {
-        top: 13px;
+        top: 15px;
         right: 5px;
     }
 
@@ -607,4 +619,9 @@ p
 .opcionMenu:hover
 {
     color: white;
+}
+
+.imagenItem
+{
+    margin-top: 5px;
 }
