--- a/styles.css
+++ b/styles.css
@@ -607,7 +607,7 @@ p
     padding: 10px;
     text-align: center;
     text-decoration: none;
-    color: rgb(247, 5, 255);
+    color: rgb(255, 255, 255);
     width: 300px;
     background-color: rgb(0, 0, 0);
     font-size: 30px;
@@ -616,11 +616,11 @@ p
 
 .opcionMenu:visited
 {
-    color: rgb(247, 5, 255);
+    color: rgb(255, 255, 255);
 }
 .opcionMenu:hover
 {
-    color: white;
+    color: rgb(240, 23, 230);
 }
 
 .imagenItem
@@ -726,7 +726,7 @@ p
     background-color: #d026ff;
     z-index: 2;
     color: white;
-    margin: 12vh auto 0 auto;
+    margin: 13vh auto 0 auto;
 
     text-align: center;
     flex-direction: column;
@@ -734,9 +734,16 @@ p
     align-items: center;
 }
 
-/* .modal-tarot .contenedor 
+.modal-tarot img 
 {
+    margin-top: 20px;
+    width: 250px;
+    height: 250px;
+    
+}
 
+.modal-tarot .content 
+{
     border: 1px solid black;
     border-radius: 20px;
     padding: 20px;
@@ -744,14 +751,232 @@ p
     color: white;
     background-color: #35034f  ;
     font-size: 20px;
-    margin: 0;
+    margin-top: 10px;
+}
 
-} */
+.container {
+    max-width: 600px;
+    margin: 10px auto;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    border-radius: 8px;
+    overflow: hidden;
+}
 
-.modal-tarot img 
+.calendar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #d010ca;
+    color: #fff;
+    padding: 15px;
+    font-size: 1.5rem;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+
+.calendar-header h2 
 {
-    margin-top: 20px;
-    width: 250px;
-    height: 250px;
+    color: white;
+}
+
+.calendar-header button {
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1rem;
+    outline: none;
+    padding: 0;
+    width: 40px; /* Ajustar ancho según necesidad */
+    height: 40px; /* Ajustar altura según necesidad */
+}
+
+.calendar-header button:hover {
+    opacity: 0.8;
+}
+
+#month-year {
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+#calendar-days {
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 15px;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    gap: 5px;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+
+}
+
+.day {
+    display: flex; /* Centrar contenido */
+    align-items: center; /* Centrar contenido */
+    flex-direction: column;
+    justify-content: center; /* Centrar contenido */
+    width: 90%; /* Asegurar que ocupe el 100% del espacio disponible */
+    height: 100%; /* Asegurar que ocupe el 100% del espacio disponible */
+    border: 1px solid #ddd;
+    padding: 10px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 0.9rem;
+    transition: background-color 0.3s ease;
+    background-color: #fff;
+    box-sizing: border-box; /* Para asegurar que el padding no aumente el tamaño del elemento */
+}
+
+.day:hover {
+    background-color: #f49ce19f;
     
+}
+
+.day .day-number {
+    font-weight: bold;
+}
+
+.day .day-name {
+    color: #666;
+    margin-top: 5px;
+    font-size: 0.8rem;
+}
+
+.day.occupied, .day.disabled {
+    background-color: #f44336;
+    color: white;
+    cursor: not-allowed;
+}
+
+.day.disabled {
+    background-color: #ccc;
+    color: #888;
+}
+
+#schedule-container {
+    display: none;
+    text-align: center;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 20px;
+    background-color: rgb(242, 145, 234);
+
+}
+
+.botonesCalendario
+{
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.botonesCalendario button
+{
+    background-color: #d010ca;
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 15px;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 10px;
+    width: 40%;
+    transition: background-color 0.3s ease;
+}
+
+.botonVolver
+{
+    background-color: #d010ca;
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 15px;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 5px;
+    width: 40%;
+    transition: background-color 0.3s ease;
+}
+
+.botonesCalendario button:hover
+{
+    background-color: #e235e8;
+
+}
+
+#selected-date {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #680b70;
+}
+
+#time-slots {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#time-slots div 
+{
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.627);
+    font-size: 18px;
+}
+
+.time-slot {
+    color: #3f3939;
+    width: calc(100% / 3);
+    border: 1px solid #ddd;
+    padding: 10px;
+    cursor: pointer;
+    text-align: center;
+    margin: 5px;
+    font-size: 0.9rem;
+    transition: background-color 0.3s ease;
+}
+
+.time-slot:hover {
+    background-color: #f1f1f1;
+}
+
+.time-slot.occupied {
+    background-color: #7d130b;
+    color: white;
+    cursor: not-allowed;
+}
+
+.time-slot.selected {
+    background-color: #a91392;
+    color: white;
+}
+
+
+.modal-seleccionarFecha
+{
+    display:  none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    top: 0;
+    left: 0;
+    overflow-y: auto;
+    background-color: #611987;
+    z-index: 2;
+    box-sizing: border-box;
+
+    padding: 10px;
+    transform: none;
+    font-size: 20px;
 }
