--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ body {
     padding: 10px 0px;
 }
 
+.contenedorLogo{
+    cursor: pointer;
+}
+
 .modal-menu{
     display:  none;
     position: fixed;
